<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.javaquiz.FirstQuestion"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/question2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tick_the_code_snippets_with_errors"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/question2Answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/int_name_7" />

        <CheckBox
            android:id="@+id/question2Answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edittext_edittext_findviewbyid_r_id_id" />

        <CheckBox
            android:id="@+id/question2Answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_eggs_10" />

        <CheckBox
            android:id="@+id/question2Answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast_name_toast_maketext_getapplicationcontext_text_toast_length_short" />

        <Button
            android:id="@+id/nextButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/next"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>
