<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.javaquiz.FirstQuestion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question4Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/question4Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/which_of_the_following_always_need_a_capital_letter"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/question4RadioButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/question4Answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_types_and_fields" />

            <RadioButton
                android:id="@+id/question4Answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fields_and_strings" />

            <RadioButton
                android:id="@+id/question4Answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objects_and_class_names" />

            <RadioButton
                android:id="@+id/question4Answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_names_and_strings" />
        </RadioGroup>

        <Button
            android:id="@+id/nextButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/next" />

    </LinearLayout>

</ScrollView>
