<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.javaquiz.FirstQuestion"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/question1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/question1_dimen"
            android:text="@string/choose_the_appropriate_data_type_for_this_value_female"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/question1RadioButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/radiogroup1_dimen">

            <RadioButton
                android:id="@+id/question1Answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booleanstring" />

            <RadioButton
                android:id="@+id/question1Answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doublestring" />

            <RadioButton
                android:id="@+id/question1Answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intstring" />

            <RadioButton
                android:id="@+id/question1Answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charstring" />

        </RadioGroup>

        <Button
            android:id="@+id/nextButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nextbutton1_dimen"
            android:text="@string/next"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>
