<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.javaquiz.FirstQuestion"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/full_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/yourScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/your_score"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yourScoreTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/_0_8"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/startAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoreTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/start_again"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/emailResultsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/startAgainButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/email_results"
            android:background="@color/colorAccent"/>

    </RelativeLayout>

</ScrollView>