<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.javaquiz.FirstQuestion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question6Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/question6Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/question6_dimen"
            android:text="@string/what_is_the_syntax_of_a_textview_object_in_java_please_use_name_for_the_name_and_id_for_the_id"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/question6Answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edittext2_dimen"
            android:hint="@string/textview_object"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/nextButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nextbutton6_dimen"
            android:text="@string/next"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>
